@@ -1,3 +1,7 @@
+2020-12-29  Kubo Takehiro <kubo@jiubao.org>
+	* ext/oci8/hook_funcs.c: Fix hooking failure with truffleruby.
+	* test/test_break.rb: Fix to pass tests with truffleruby.
+
 2020-12-28  Kubo Takehiro <kubo@jiubao.org>
 	* mkpkg-win32.rb: Build binary gems for ruby 3.0 on Windows.
 
